--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,12 @@
     "builds": [
       {
         "src": "index.js",
-        "use": "@vercel/next"
+        "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "(.*)",
+        "src": "/(.*)",
         "dest": "index.js"
       }
     ]
